objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Authorization_to_Run_Credit_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether customer provided consent for Unison to run credit on customer during call.</inlineHelpText>
        <label>Authorization to Run Credit Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Already_Scored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Already Scored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Call_Result</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Scorecard_URL__c</fullName>
        <formula>'https://app.formassembly.com/forms/view/438070?taskid=' &amp;  Id  &amp;'&amp;tfa_1166='&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Scorecard URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <formula>IF(ISBLANK(CallDurationInSeconds),CreatedDate,CreatedDate-(0.0000115740740740741*CallDurationInSeconds))</formula>
        <inlineHelpText>Call start timestamp</inlineHelpText>
        <label>Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Co_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co-Hosted Meetings</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Hosted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Hosted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Cloud_Call_Count__c</fullName>
        <formula>IF (
AND( ActivityDate = TODAY(), OR(Subject = "CloudCall Call",  BEGINS(Subject, "5NineCall")) ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Cloud Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Indicates whether email or call is inbound or outbound</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Direction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_Hidden__c</fullName>
        <inlineHelpText>Populated from the Due or Start date by workflow each time the record is edited. Used as criteria for DLRS triggers</inlineHelpText>
        <label>Due Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Campaign_Status__c</fullName>
        <label>Email Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Invalid Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_DateTime_Received__c</fullName>
        <description>Time stamp field for email receipts</description>
        <label>Email DateTime Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Successful_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if first contact was an email.</inlineHelpText>
        <label>Successful Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9CallRecordingFile__c</fullName>
        <label>Five9CallRecordingFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9Comments__c</fullName>
        <label>Five9Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <formula>IF( IsTask, IsClosed, 
 IF( ActivityDateTime &lt; NOW() , TRUE, FALSE 
 ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to check if the task or event is closed for criteria in DLRS</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_is_Onlinesys_Admin__c</fullName>
        <description>Helper field to identify which task have been created by the online application integration user. These task will get assigned to the Program Specialist/ Account Executive.</description>
        <formula>Owner:User.Alias = 'osysa'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner is Onlinesys Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Event_Method__c</fullName>
        <description>Method for Partner Events</description>
        <label>Partner Event Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Event_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Event_Type__c</fullName>
        <description>Event type for Partner Events</description>
        <label>Partner Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lunch and Learn</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Re-Engaged Training</fullName>
                </value>
                <value>
                    <fullName>LOP Training</fullName>
                </value>
                <value>
                    <fullName>Dinner / Cocktail Event</fullName>
                </value>
                <value>
                    <fullName>Conference / Expo</fullName>
                </value>
                <value>
                    <fullName>Branch Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <formula>"https://na9.salesforce.com/"&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareFile_Link__c</fullName>
        <label>ShareFile Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Event Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program Training</fullName>
                </value>
                <value>
                    <fullName>Portal Training</fullName>
                </value>
                <value>
                    <fullName>Other Program Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>